Changelog for collective.editskinswitcher
=========================================

1.4 (unreleased)
----------------

- Nothing changed yet.


1.3 (2010-12-14)
----------------

- Do not show the Styles menu when there are no styles to choose.
  [maurits]

- Moved PAGE_WHITE_LIST and SUFFIX_WHITE_LIST from traversal.py to new
  config.py.
  [maurits]

- Added SUFFIX_WHITE_LIST to avoid triggering a forced login for css
  or javascript files, otherwise the login form will look ugly.  Also
  added logo.jpg/png/gif and favicon.ico to the PAGE_WHITE_LIST for
  the same reason.
  [maurits]


1.2 (2010-12-07)
----------------

- Do not force logging in when you get this header for a login page
  (specified by the PAGE_WHITE_LIST).
  [maurits]


1.1 (2010-12-07)
----------------

- Use ``get_header`` instead of ``get`` when looking for headers to
  force logging in or force using the edit skin.
  [maurits]

- Allow setting a default skin on a folder, using the new Styles
  context menu.
  [dreamcatcher]


1.0 (2010-06-07)
----------------

- Fix: when we need authentication and we are anonymous then we do
  *not* want to switch: we want to have the default behaviour of
  getting the standard skin instead of the edit skin.  Added some more
  inline documentation.
  [maurits]

- Switch back to checking the ``__ac`` cookie to see if someone is
  anonymous or not; the getSecurityManager check always says we are
  anonymous, though I thought I had seen it working previously.
  [maurits]

- Add logging lines for debugging.
  [maurits]


0.9 (2010-04-19)
----------------

- Change the switch skin action to a multiple selection.  When one
  of the selected actions returns True, we switch the skin.
  [maurits]

- Also accept urls like admin.example.org as edit urls.
  [maurits]


0.8 (2010-04-16)
----------------

- Slightly better check for anonymous users, using getSecurityManager
  instead of checking for an ``__ac`` cookie.
  [maurits]
